--- a/fly.toml
+++ b/fly.toml
@@ -7,6 +7,8 @@ kill_timeout = 5
 processes = []
 
 [env]
+    NODE_ENV = "production"
+    PORT = 8080
 
 [experimental]
   allowed_public_ports = []
